@@ -48,10 +48,9 @@ CFlags <- function(print = TRUE) {
 }
 
 inlineCxxPlugin <- function(...) {
-    plugin <-
-        Rcpp:::Rcpp.plugin.maker(include.before = "#include <rquantlib.h>",
-                                 libs = sprintf("%s $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)", LdFlags(FALSE)),
-                                 package = "RQuantLib", Makevars = NULL, Makevars.win = NULL)
+    plugin <- Rcpp::Rcpp.plugin.maker(include.before = "#include <rquantlib.h>",
+                                      libs = sprintf("%s $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)", LdFlags(FALSE)),
+                                      package = "RQuantLib", Makevars = NULL, Makevars.win = NULL)
     settings <- plugin()
     settings$env$PKG_CPPFLAGS <- CFlags(FALSE)
     settings
